# raman_spectroscopy

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  Отчет.docx
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  errors.py  request_id.py
backend/app/schemas/: openapi_models.py  raman.py
backend/tests/: test_raman.py
backend/tests/fixtures/: sample_raman_map.txt
ml/: README.md  pyproject.toml  sitecustomize.py
ml/artifacts/raman_mil_train_and_results_1500/: map_records.csv  oof_predictions.csv  summary.json
ml/notebooks/: model.ipynb  preprocessing.ipynb  raman_mil_check.ipynb  raman_mil_train_and_results.ipynb  single_spectrum_inference.ipynb
ml/spectr_data/: manifest.csv  spectrum_01_center2900_striatum_right_control_2Bgroup_633nm_center2900_obj100_power100_1s_5acc_map35x15_step2_place3_4_spec025.txt  spectrum_03_center2900_striatum_right_endo_2Agroup_633nm_center2900_obj100_power100_1s_5acc_map35x15_step2_place3_4_spec281.txt  spectrum_04_center1500_striatum_left_endo_2Agroup_633nm_center1500_obj100_power100_1s_5acc_map35x15_step2_place1_3_spec250.txt  spectrum_05_center1500_cerebellum_right_exo_3group_633nm_center1500_obj100_power100_1s_5acc_map35x15_step2_place2_4_spec228.txt  spectrum_06_center1500_striatum_left_control_2Agroup_633nm_center1500_obj100_power100_1s_5acc_map35x15_step2_place2_3_spec142.txt  spectrum_07_center1500_cortex_control_1group_633nm_center1500_obj100_power100_1s_5acc_map35x15_step2_place6_1_spec104.txt  spectrum_08_center1500_cortex_right_exo_2Agroup_633nm_center1500_obj100_power100_1s_5acc_map35x15_step2_place3_2_spec089.txt
ml/src/: infer_single_spectrum.py  train_mil.py  utils.py
ml/src/raman_mil/: __init__.py  data.py  (+5 more)
ml/tests/: test_raman_mil_smoke.py
(+88 files in other folders)
