[project]
name = "deeppick-backend"
version = "0.1.0"
description = "FastAPI contract-first skeleton for DeepPick"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "gunicorn>=22.0.0,<24.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
